recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:44: error: Unmatched closing brace '}' ignored here
}
^