recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  	var nbPas : double = 100;
  var angle : double = 90;
  
  avance(nbPas);
  getY(angle);
  avance(nbPas);
  getY(angle);
  avance(nbPas);
	getY(angle);
  avance(nbPas);
  getY(2*angle);
  
  avance(nbPas);
  getY(angle);
  avance(nbPas);
  getY(angle);
  avance(nbPas);
	getY(angle);
  avance(nbPas);
  getY(2*angle);
  
  avance(nbPas);
  getY(angle);
  avance(nbPas);
  getY(angle);
  avance(nbPas);
	getY(angle);
  avance(nbPas);
  getY(2*angle);
  
  avance(nbPas);
  getY(angle);
  avance(nbPas);
  getY(angle);
  avance(nbPas);
	getY(angle);
  avance(nbPas);
  getY(2*angle);
}
}
